--- a/package.json
+++ b/package.json
@@ -6,13 +6,41 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.1",
+    "@badrap/bar-of-progress": "^0.1.2",
+    "@heroicons/react": "^1.0.6",
+    "@mantine/core": "^4.2.1",
+    "@mantine/next": "^4.2.1",
+    "@prisma/client": "^3.13.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@stripe/stripe-js": "^1.29.0",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/micro-cors": "^0.1.2",
+    "@types/react-currency-formatter": "^1.1.4",
+    "aos": "^2.3.4",
+    "apollo-server-micro": "^3.6.7",
+    "bcrypt": "^5.0.1",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
+    "mongoose": "^6.3.1",
     "next": "latest",
+    "next-auth": "^4.3.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-currency-formatter": "^1.1.0",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0",
+    "react-hot-toast": "^2.2.0",
+    "react-redux": "^8.0.1",
+    "react-responsive-carousel": "^3.2.23",
+    "stripe": "^8.219.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-redux": "^7.1.24",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
