--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "@heroicons/react": "^1.0.6",
     "@mantine/core": "^4.2.1",
     "@mantine/next": "^4.2.1",
+    "@paypal/react-paypal-js": "^7.6.0",
     "@reduxjs/toolkit": "^1.8.1",
-    "@stripe/stripe-js": "^1.29.0",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/micro-cors": "^0.1.2",
     "@types/react-currency-formatter": "^1.1.4",
     "aos": "^2.3.4",
     "apollo-server-micro": "^3.6.7",
     "bcrypt": "^5.0.1",
+    "lodash.debounce": "^4.0.8",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
+    "moment-mini": "^2.24.0",
     "mongoose": "^6.3.1",
     "next": "latest",
     "next-auth": "^4.3.4",
@@ -30,8 +33,7 @@
     "react-hook-form": "^7.30.0",
     "react-hot-toast": "^2.2.0",
     "react-redux": "^8.0.1",
-    "react-responsive-carousel": "^3.2.23",
-    "stripe": "^8.219.0"
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
