--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/micro-cors": "^0.1.2",
     "@types/react-currency-formatter": "^1.1.4",
     "aos": "^2.3.4",
+    "apollo-link-http": "^1.5.17",
     "apollo-server-micro": "^3.6.7",
     "bcrypt": "^5.0.1",
     "lodash.debounce": "^4.0.8",
